fix double scroll

--- a/src/Components/RcTable/RcTable.css
+++ b/src/Components/RcTable/RcTable.css
@@ -68,7 +68,8 @@
 
 /* TODO  fix height component */
 .rc-table-scroll-container {
-  max-height: calc(100vh - 170px);
+  max-height: calc(100vh - 140px);
+  overflow-y: auto;
   position: relative;
 }
 
